# claude-pragma

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  opencode.json
.claude-plugin/: marketplace.json
.opencode/agents/: security.md  star-chamber.md
.opencode/commands/: implement.md  review.md  setup-project.md  star-chamber.md  validate.md
.opencode/skills/go-effective/: SKILL.md
.opencode/skills/go-proverbs/: SKILL.md
.opencode/skills/implement/: SKILL.md
.opencode/skills/python-style/: SKILL.md
.opencode/skills/review/: SKILL.md
.opencode/skills/security/: SKILL.md
.opencode/skills/setup-project/: SKILL.md
.opencode/skills/star-chamber/: SKILL.md
.opencode/skills/state-machine/: SKILL.md
.opencode/skills/typescript-style/: SKILL.md
.opencode/skills/validate/: SKILL.md
agents/: security.md  star-chamber.md
claude-md/languages/go/: go.md
claude-md/languages/python/: python.md
claude-md/languages/typescript/: typescript.md
claude-md/universal/: base.md  context-aware.md  validation-precedence.md
plugins/pragma/.claude-plugin/: plugin.json
plugins/pragma/agents/: security.md  star-chamber.md
plugins/pragma/reference/python/: pyproject.toml
reference/python/: pre-commit-config-monorepo.yaml  pre-commit-config.yaml  pyproject.toml
reference/star-chamber/: generate_config.py  providers.json  sdk_map.json
reference/typescript/: biome.json  vite.config.ts
scripts/: assemble.sh  install.sh  opencode-install.sh
skills/advisory/star-chamber/: PROTOCOL.md  SKILL.md  contract.json  llm_council.py
skills/example-skill/: SKILL.md
skills/universal/implement/: SKILL.md
skills/universal/review/: SKILL.md
skills/universal/setup-project/: SKILL.md
skills/validators/go-effective/: SKILL.md  contract.json
skills/validators/go-proverbs/: SKILL.md  (+1 more)
tools/go-structural/: .golangci.yaml  go.mod  main.go  main_test.go
(+53 files in other folders)
