# Reference pyproject.toml - tool configuration section.
# Copy relevant sections to your project's pyproject.toml.

[project]
name = "your-project"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ty>=0.0.1",          # Preferred: Astral's type checker (faster, uv/ruff ecosystem)
    # "mypy>=1.0.0",      # Alternative: use if already configured in project
    "ruff>=0.14.0",
    "pre-commit>=4.0.0",
    "coverage>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Preferred: Astral's ty (10-60x faster than mypy)
[tool.ty]
python-version = "3.11"

# Alternative: mypy (use if already configured in project)
# [tool.mypy]
# strict = true
# exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
